# rbf-rs-example

./: README.md
todo_api/: Cargo.toml
todo_api/src/: cli.rs  error.rs  logger.rs  main.rs
todo_api/src/db/: cors.rs  mod.rs
todo_api/src/models/: task.rs
todo_api/src/routes/: tasks.rs
todo_api/todo_api_derive/: Cargo.toml
todo_api/todo_api_derive/src/: api_model.rs  lib.rs
todo_desktop/: Cargo.toml
todo_desktop/src/: app.rs  main.rs
todo_desktop/src/db/: mod.rs
todo_desktop/src/event/: mod.rs
todo_desktop/src/model/: id.rs  mod.rs  task.rs
todo_desktop/src/utils/: logger.rs  macros.rs  mod.rs  traits.rs
todo_desktop/src/widgets/: expand.rs  header.rs  mod.rs  task.rs
todo_desktop/src/widgets/screens/: error_screen.rs  main_screen.rs  mod.rs
todo_desktop/themes/macos/: README.md
todo_desktop/themes/windows/: README.md  gtk.gresource  gtk.gresource.xml
todo_mobile/: .gitignore  README.md  pubspec.yaml  todo_web.sln
todo_web/: Program.cs  todo_web.sln
todo_web/Components/: App.razor  _Imports.razor
todo_web/Components/Layout/: NavMenu.razor
todo_web/Properties/: launchSettings.json
