[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
log = "0.4.27"
pretty-type-name = "1.0.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
todo_api_derive = { path = "todo_api_derive" }