[package]
name = "todo_desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
gdk = "0.16.1"
gio = "0.16.1"
glib = "0.16.1"
gtk = "0.16.1"
log = "0.4.27"
openssl = { version = "0.10", features = ["vendored"] }
relm = "0.24.1"
relm-derive = "0.24.0"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
